Added Fleek Configuration

--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "Hello avs fleek",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --config webpack.config.js && echo 'export const main = __webpack_exports__.main;' >> dist/bundle.js"
   },
-  "type": "commonjs",
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "webpack": "^5.90.1",
+    "webpack-cli": "^5.1.4"
+  },
   "dependencies": {
     "ethers": "^5.0.0"
   }
