--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
-    "ethers": "^5.0.0"
+    "ethers": "^5.0.0",
+    "node-fetch": "^3.3.2"
   }
 }
